sumo/tests/traci/VariableRetrieval/Simulation/errors/UnsupportedVariable/testclient.prog
simstep2 5
getvariable 0xab 0xff dummy
simstep2 6
